# rest_api

./: README.md  README_Docker.md  config.env.example  docker-compose.yml  pyproject.toml
networks/: README.md
programs/: README.md  client.py  program_a.py  program_b.py  program_c.py  program_festapi.py
programs/recursos/: arquivo.txt
project/controller/: user.py
project/db/: config.py  connection.py  ddl.sql
project/models/: body_post.json  user.py
project/routes/: user.py
